# SENECA-assignment

./: .gitignore  Project_1-S25-Fashion_Pratham.ipynb  README.md
Semester_1/cloud computing/: project2.ipynb
Semester_2/robotics/project 3/src/jetauto_simulations/jetauto_description/: CMakeLists.txt  package.xml  urdf.rviz
Semester_2/robotics/project 3/src/jetauto_simulations/jetauto_description/config/: joint_names_jetauto_description.yaml
Semester_2/robotics/project 3/src/jetauto_simulations/jetauto_description/launch/: control_view.launch  display.launch  gazebo.launch
Semester_2/robotics/project 3/src/jetauto_simulations/jetauto_description/meshes/pro/arm/: link3.stl  link4.stl  servo_link.stl
Semester_2/robotics/project 3/src/jetauto_simulations/jetauto_description/rviz/: control_view.rviz  urdf.rviz
Semester_2/robotics/project 3/src/jetauto_simulations/jetauto_description/urdf/: depth_camera.urdf.xacro  imu.gazebo.xacro  imu.urdf.xacro  jetauto.gazebo.xacro  jetauto.urdf.xacro  jetauto_car.gazebo.xacro  jetauto_car.urdf.xacro  lidar.gazebo.xacro  lidar.urdf.xacro  screen.gazebo.xacro  screen.urdf.xacro
Semester_2/robotics/project 3/src/jetauto_simulations/jetauto_description/urdf/pro/: depth_camera.gazebo.xacro  depth_camera.urdf.xacro  depth_camera_connect.gazebo.xacro  depth_camera_connect.urdf.xacro  gripper.gazebo.xacro  gripper.transmission.xacro  gripper.urdf.xacro  jetauto_arm.gazebo.xacro  jetauto_arm.transmission.xacro  jetauto_arm.urdf.xacro  jetauto_car.urdf.xacro  screen.gazebo.xacro  usb_camera.gazebo.xacro  usb_camera.urdf.xacro
(+686 files in other folders)
